kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portal-service
spec:
  selector:
    app: portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
